force-app/main/default/objects/Driver__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of driver</description>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>