force-app/main/default/objects/Driver__c/fields/Amount_Of_Race_Results__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Race_Results__c</fullName>
    <description>Amount of Race Results for current race (Roll-Up Summary on Race Result object)</description>
    <label>Amount Of Race Results</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>