force-app/main/default/objects/Driver__c/fields/Podium_Second__c.field-meta.xml
<CustomField>
    <fullName>Podium_Second__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Podium Second</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Drivers (Podium Second)</relationshipLabel>
    <relationshipName>Drivers1</relationshipName>
    <type>Lookup</type>
</CustomField>