force-app/main/default/objects/Driver__c/fields/Podium_Third__c.field-meta.xml
<CustomField>
    <fullName>Podium_Third__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Podium Third</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Drivers (Podium Third)</relationshipLabel>
    <relationshipName>Drivers2</relationshipName>
    <type>Lookup</type>
</CustomField>