force-app/main/default/objects/Driver__c/validationRules/No_underage.validationRule-meta.xml
<ValidationRule>
    <fullName>No_underage</fullName>
    <active>true</active>
    <description>No drivers aged below 18 are allowed for race.</description>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorMessage>No drivers aged below 18 are allowed for race.</errorMessage>
</ValidationRule>